Bug 158461 - Flicker during live resizing when using Skia/Metal
Summary: Flicker during live resizing when using Skia/Metal
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: ARM macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:7.6.5 target:24....
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-30 15:08 UTC by Patrick (volunteer)
Modified: 2023-12-12 15:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick (volunteer) 2023-11-30 15:08:33 UTC
When live resizing a window on macOS, there is a brief flicker after each resize but only when using Skia/Metal.

Steps to reproduce:

1. In LibreOffice's Options dialog in the LibreOffice > View panel, enable Skia/Metal by setting the following checkboxes, press the OK button, and restart if prompted:
   - Check "Use Skia for all rendering"
   - Uncheck "Force Skia software rendering"

2. Open a new Writer or Calc document and and live resize the window via a mouse dragging a window edge or corner.

With Skia/Metal, the toolbar area will flicker with every mouse drag until you release the mouse.

This bug does not occur with Skia/Raster or Skia disabled so my guess is that there are some missing flushes to screen when using Skia/Metal.
Comment 1 Commit Notification 2023-12-09 22:08:03 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7e81a321bc3e4880fc652e7ba24867bba557007

tdf#158461 eliminate flicker during live resizing

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Patrick (volunteer) 2023-12-09 22:11:19 UTC
I have committed a fix and the fix should be in tomorrow's (10 December 2023) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation but before you launch /Applications/LibreOfficeDev:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 3 Commit Notification 2023-12-12 10:43:41 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/eaf8fc199c36ee8613655876c5c202b22d7f15da

tdf#158461 eliminate flicker during live resizing

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-12-12 15:37:15 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/688ad93ccc2a3393046f2e4fe33f5be039b1803f

tdf#158461 eliminate flicker during live resizing

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.