tdf#158461 eliminate flicker during live resizing

When using Skia/Metal, the window content will flicker while
live resizing a window if we don't send a paint event.

Change-Id: Ib3edc497e26e6abfdfd17a34f9269a3eae090805
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160519
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@libreoffice.org>
(cherry picked from commit f7e81a321bc3e4880fc652e7ba24867bba557007)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160479
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>